feat: implements pages on getAll endpoints